Spacing fix for categories in blog list post

--- a/core/static/roca/sass/roca.scss
+++ b/core/static/roca/sass/roca.scss
@@ -512,14 +512,14 @@ img {
 		font-size: 1em;
 		font-weight: lighter;
 		padding: 0 3px;
-		margin: 5px 20px 20px;
+		margin: 5px 5px 20px;
 		border-bottom: none;
 
 		.categories {
 			display: block;
 			clear: both;
 			font-style: normal;
-			margin: 15px 0 15px 0;
+			margin: 0px 0 15px 0;
 			color: #B1B1B1;
 			font-size: .8em;
 		}
